[tool.poetry]
name = "monoHDRmerge"
version = "0.1.0"
description = ""
authors = ["benste <benstmrs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
gradio = "^4.19.1"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.2"
flake8 = "^7.0.0"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
